--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -1,170 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_shopping_cart"
+    android:id="@+id/activity_cart"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".activity.ProductDetailActivity">
 
-    <LinearLayout
-        android:id="@+id/toolbar_layout_shopping_cart"
+    <include
+        layout="@layout/app_bar_shopping_cart"/>
+
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/txt_header_shopping_cart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_chainStyle="spread_inside"
-        tools:context=".activity.CompareActivity">
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/app_bar_compare" />
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/layout_shopping_cart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </LinearLayout>
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/txt_header_shopping_cart"
+                style="@style/textCompare"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="16dp"
+                android:paddingTop="16dp"
+                android:ellipsize="end"
+                android:text="@string/compare_header"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:typeFaceAsset="RobotoLight.ttf" />
 
-    <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/txt_header_shopping_cart"
-        style="@style/textCompare"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:ellipsize="end"
-        android:text="@string/compare_header"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout_shopping_cart"
-        app:typeFaceAsset="RobotoLight.ttf" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_shopping_cart"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        android:paddingRight="16dp"
-        android:paddingLeft="16dp"
-        app:layout_constraintBottom_toTopOf="@id/layout_total_shopping_cart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_header_shopping_cart" />
-
-    <LinearLayout
-        android:id="@+id/layout_total_shopping_cart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginRight="6dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/layout_button_shopping_cart"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            style="@style/textNameProduct"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            tools:text="Total :" />
-
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            style="@style/textNameProduct"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="18dp"
-            android:layout_marginStart="18dp"
-            android:textSize="18sp"
-            tools:text="4,404" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layout_button_shopping_cart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="6dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/back_to_shop"
-            style="@style/RaisedButtonCard"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="3dp"
-            android:layout_marginRight="3dp"
-            android:layout_weight="0.5"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@color/categoryColor">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/img_icon"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginStart="4dp"
-                    android:contentDescription="@string/product_available"
-                    android:src="@drawable/ic_back" />
-
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    style="@style/RaisedButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/product_available"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    app:typeFaceAsset="RobotoLight.ttf" />
-
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/payment"
-            style="@style/RaisedButtonCard"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_weight="0.5"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@color/colorPrimary">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_shopping_cart"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
+                android:paddingRight="16dp"
+                android:paddingLeft="16dp"
+                app:layout_constraintBottom_toTopOf="@id/layout_total_shopping_cart"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt_header_shopping_cart" />
 
             <LinearLayout
+                android:id="@+id/layout_total_shopping_cart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/product_compare"
-                    android:src="@drawable/ic_check" />
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="6dp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toTopOf="@+id/layout_button_shopping_cart"
+                app:layout_constraintEnd_toEndOf="parent">
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    style="@style/RaisedButton"
+                    style="@style/textNameProduct"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/payment_header"
-                    android:textColor="@android:color/white"
                     android:textSize="14sp"
-                    app:typeFaceAsset="RobotoLight.ttf" />
+                    tools:text="Total :" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    style="@style/textNameProduct"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="18dp"
+                    android:textSize="18sp"
+                    tools:text="4,404" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_button_shopping_cart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/back_to_shop"
+                    style="@style/RaisedButtonCard"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="3dp"
+                    android:layout_weight="0.5"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@color/categoryColor">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/img_icon"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="4dp"
+                            android:contentDescription="@string/product_available"
+                            android:src="@drawable/ic_back" />
+
+                        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                            style="@style/RaisedButton"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/product_available"
+                            android:textColor="@android:color/white"
+                            android:textSize="14sp"
+                            app:typeFaceAsset="RobotoLight.ttf" />
+
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/payment"
+                    style="@style/RaisedButtonCard"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:layout_weight="0.5"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:cardBackgroundColor="@color/colorPrimary">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center_vertical"
+                            android:contentDescription="@string/product_compare"
+                            android:src="@drawable/ic_check" />
+
+                        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                            style="@style/RaisedButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/payment_header"
+                            android:textColor="@android:color/white"
+                            android:textSize="14sp"
+                            app:typeFaceAsset="RobotoLight.ttf" />
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
 
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </android.support.constraint.ConstraintLayout>
 
-    </LinearLayout>
+    </FrameLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
