--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -65,7 +65,7 @@
                     style="@style/textNameProduct"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
+                    android:textSize="18sp"
                     android:text="@string/total_price" />
 
                 <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -74,7 +74,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="18dp"
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     tools:text="4,404" />
             </LinearLayout>
 
@@ -134,7 +134,7 @@
                     android:layout_marginStart="3dp"
                     android:layout_weight="0.5"
                     android:foreground="?android:attr/selectableItemBackground"
-                    app:cardBackgroundColor="@color/colorPrimary">
+                    app:cardBackgroundColor="@color/hintColor">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
