--- a/app/src/main/res/layout/fragment_payment_check_out.xml
+++ b/app/src/main/res/layout/fragment_payment_check_out.xml
@@ -43,10 +43,11 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="16dp"
             android:background="@drawable/border_grey"
-            android:inputType="text"
+            android:inputType="number"
             android:maxLines="1"
             android:padding="8dp"
             android:textSize="18sp"
+            android:maxLength="10"
             android:windowSoftInputMode="adjustResize" />
 
         <android.support.v7.widget.CardView
@@ -56,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@color/colorPrimary">
+            app:cardBackgroundColor="@color/hintColor" >
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 style="@style/RaisedButton"
