--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -1,105 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/powerBuyWhite"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/powerBuyWhite"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/layout_shopping_cart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/product_image_list_shopping_cart"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
-        android:orientation="horizontal">
+        android:background="@drawable/border_grey"
+        android:contentDescription="@string/product_detail"
+        android:padding="6dp"
+        android:src="@drawable/ic_pwb_logo_detail"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/product_name_list_shopping_cart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:background="@drawable/border_grey"
-            android:contentDescription="@string/product_detail"
-            android:padding="6dp"
-            android:src="@drawable/ic_pwb_logo_detail" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:orientation="vertical">
-
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/product_name_list_shopping_cart"
-                style="@style/descriptionProduct"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                tools:text="Product Name" />
-
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/product_code_list_shopping_card"
-                style="@style/descriptionProduct"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="@string/product_code" />
-
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/price_list_shopping_cart"
-                style="@style/descriptionProduct"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Price : ฿68" />
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp">
-
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    android:id="@+id/txt_qty_title_list_shopping_cart"
-                    style="@style/descriptionProduct"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/qty" />
-
-                <cenergy.central.com.pwb_store.view.PowerBuyIncreaseOrDecreaseView
-                    android:id="@+id/qty__list_shopping_cart"
-                    android:layout_width="160dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_toEndOf="@+id/txt_qty_title_list_shopping_cart" />
-
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    android:id="@+id/total_price_list_shopping_cart"
-                    style="@style/textNameProduct"
-                    android:textSize="22sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    tools:ignore="RelativeOverlap"
-                    tools:text="฿204" />
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/product_name_list_shopping_cart"
+        style="@style/descriptionProduct"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/deleteItemImageView"
+        app:layout_constraintStart_toEndOf="@+id/product_image_list_shopping_cart"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Product Name" />
 
     <ImageView
         android:id="@+id/deleteItemImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/layout_shopping_cart"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/product_detail"
-        android:src="@drawable/ic_cancel" />
+        android:src="@drawable/ic_cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/product_name_list_shopping_cart"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/product_code_list_shopping_card"
+        style="@style/descriptionProduct"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/product_image_list_shopping_cart"
+        app:layout_constraintTop_toBottomOf="@+id/product_name_list_shopping_cart"
+        tools:text="@string/product_code" />
+
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/price_list_shopping_cart"
+        style="@style/descriptionProduct"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/product_image_list_shopping_cart"
+        app:layout_constraintTop_toBottomOf="@+id/product_code_list_shopping_card"
+        tools:text="Price : ฿68" />
+
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/txt_qty_title_list_shopping_cart"
+        style="@style/descriptionProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
+        android:text="@string/qty"
+        app:layout_constraintStart_toEndOf="@id/product_image_list_shopping_cart"
+        app:layout_constraintTop_toBottomOf="@+id/price_list_shopping_cart" />
+
+    <cenergy.central.com.pwb_store.view.PowerBuyIncreaseOrDecreaseView
+        android:id="@+id/qty_list_shopping_cart"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toEndOf="@+id/txt_qty_title_list_shopping_cart"
+        app:layout_constraintTop_toBottomOf="@+id/price_list_shopping_cart" />
+
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/total_price_list_shopping_cart"
+        style="@style/textNameProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:gravity="end"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/price_list_shopping_cart"
+        tools:ignore="RelativeOverlap"
+        tools:text="฿204" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/layout_shopping_cart"
-        android:background="@color/graySelect" />
+        android:background="@color/graySelect"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
