--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -54,9 +54,9 @@
         style="@style/descriptionProduct"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/product_image_list_shopping_cart"
         app:layout_constraintTop_toBottomOf="@+id/product_name_list_shopping_cart"
@@ -67,16 +67,16 @@
         style="@style/descriptionProduct"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/product_image_list_shopping_cart"
         app:layout_constraintTop_toBottomOf="@+id/product_code_list_shopping_card"
         tools:text="Price : ฿68" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/txt_qty_title_list_shopping_cart"
+        android:id="@+id/qty_title_list_shopping_cart"
         style="@style/descriptionProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -91,10 +91,21 @@
         android:id="@+id/qty_list_shopping_cart"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintStart_toEndOf="@+id/txt_qty_title_list_shopping_cart"
+        android:layout_marginTop="6dp"
+        app:layout_constraintStart_toEndOf="@+id/qty_title_list_shopping_cart"
         app:layout_constraintTop_toBottomOf="@+id/price_list_shopping_cart" />
+
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/txt_qty_title_list_shopping_cart"
+        style="@style/descriptionProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
+        app:layout_constraintStart_toEndOf="@id/qty_list_shopping_cart"
+        app:layout_constraintTop_toBottomOf="@id/price_list_shopping_cart"
+        tools:text="6" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/total_price_list_shopping_cart"
