--- a/app/src/main/res/layout/list_item_stores.xml
+++ b/app/src/main/res/layout/list_item_stores.xml
@@ -2,13 +2,16 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/store_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/line_store"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,7 +21,9 @@
         android:id="@+id/line_store"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:background="@color/grayTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/store_name" />
+        app:layout_constraintTop_toBottomOf="@+id/store_name"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
